<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".Summary_fragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <ImageButton
                android:id="@+id/btnBack"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/bg_circle_teal"
                android:src="@drawable/ic_left"
                app:tint="@color/white" />

            <TextView
                android:id="@+id/txtHeader"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="12dp"
                android:fontFamily="@font/dongle"
                android:text="@string/summary"
                android:textColor="@android:color/black"
                android:textSize="32sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/dongle"
                android:text="Step 3"
                android:textColor="@color/black"
                android:textSize="20sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="8dp"
            android:background="@color/black" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="2dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:fontFamily="@font/dongle"
                    android:text="@string/here_s_the_help_you_re_giving"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:id="@+id/summaryItemsContainer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <CheckBox
            android:id="@+id/checkAnonymous"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/dongle"
            android:text="@string/donate_anonymously"
            android:textSize="20sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/dongle_light"
            android:text="@string/your_donation_will_be_recorded_without_your_name_or_details"
            android:textSize="15sp" />

        <Button
            android:id="@+id/btnApplyToDonate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/apply_to_donate"
            android:backgroundTint="#27869B"
            android:fontFamily="@font/dongle"
            android:textSize="20sp"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            app:cornerRadius="5dp"/>

    </LinearLayout>
</ScrollView>