<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"

    tools:context=".EditProfile_fragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="48dp">

        <FrameLayout
            android:id="@+id/profile_image_container"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginTop="50dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <ImageView
                android:id="@+id/profile_pic"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:src="@drawable/ic_profile_avatar"

                android:contentDescription="User profile picture" />

            <ImageView
                android:id="@+id/btn_edit_image"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_gravity="bottom|end"
                android:background="@drawable/ic_editframe"
                android:contentDescription="Edit profile picture"
                android:padding="5dp" />

        </FrameLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginTop="16dp"
            app:cardCornerRadius="12dp"
            app:cardElevation="8dp"
            app:layout_constraintTop_toBottomOf="@id/profile_image_container">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edit_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Juan M. Dela Cruz" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:hint="@string/province">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edit_province"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Metro Manila" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:hint="@string/city_municipality">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edit_city"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Quezon City" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:hint="@string/barangay">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edit_barangay"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Brgy. 123" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:hint="@string/street">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edit_street"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Maligaya Street" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:hint="@string/contact_number">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edit_contact"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="09123456789"
                        android:inputType="phone" />
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/btn_save_profile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:backgroundTint="#27869B"
                    android:text="@string/save"
                    android:textSize="18sp"
                    app:cornerRadius="6dp" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>